--- a/ThreeDAdMachine/Communication/Communication.csproj
+++ b/ThreeDAdMachine/Communication/Communication.csproj
@@ -45,8 +45,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Device.cs" />
+    <Compile Include="Models\DeviceCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\CommunicationService.cs" />
+    <Compile Include="Repository\DeviceCommandRepository.cs" />
+    <Compile Include="Services\DeviceCommunicationService.cs" />
+    <Compile Include="Services\DeviceMediaPlayService.cs" />
     <Compile Include="Services\DeviceService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -57,6 +60,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interface\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
